# ESP-AT-Commander

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandTree.tsx  FavoriteModal.tsx  Icons.tsx  ParamForm.tsx  ScriptPanel.tsx  SerialBar.tsx  SettingsModal.tsx  StatusBar.tsx  Terminal.tsx  WindowControls.tsx
frontend/src/stores/: commands.ts  favorites.ts  history.ts  logs.ts  parser.ts  serial.ts  settings.ts  stats.ts  theme.ts
frontend/src/styles/: tokens.css
frontend/src/types/: index.ts
frontend/src/utils/: parseInfo.ts
plugins/esp-at/: commands.json  parser.json  plugin.json
plugins/esp-at/scripts/: esp32-init.yaml  mqtt-test.yaml  wifi-connect.yaml
plugins/esp-at/scripts/user/: 未命名脚本.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
